--- a/.github/workflows/main_my-flask-app-unique.yml
+++ b/.github/workflows/main_my-flask-app-unique.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r my-flask-app/requirements.txt
+          pip install -r requirements.txt
 
       - name: Archive files
         run: zip -r my-flask-app.zip .
